--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,5 +8,5 @@ html{
 }
 
 .custom-img {
-  background-image: url('https://images.unsplash.com/photo-1579783901586-d88db74b4fe4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=748&q=80s');
+  background-image: url('https://cdn.shopify.com/s/files/1/0549/9813/9112/articles/2021_Refik-Anadol_Machine-Hallucinations-Nature-Dreams_KOENIG-GALERIE-NAVE_Berlin_c_Roman_Maerz-_13.jpg?v=1642082511');
 }
