--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,14 +6,16 @@
     margin-bottom: 5rem;
     line-height: 1.15;
     font-size: 3.5rem;
-    text-align: center;
+    text-align: center; 
   }
   
   .imagecontainer {
     display: grid;
-    grid-template-columns: 2fr 2fr;
-    column-gap: 2rem;
-    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    padding: 0.5rem;
+    margin: 0 auto;
+    box-sizing: border-box;
   }
   
   @media (max-width: 600px) {
