--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,6 +16,9 @@
     padding: 0.5rem;
     margin: 0 auto;
     box-sizing: border-box;
+    padding-left: 4%;
+    padding-right: 0%;
+
   }
   
   @media (max-width: 600px) {
