--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,6 +20,15 @@
     padding-right: 0%;
 
   }
+
+
+.body {
+  background: 100% 5px no-repeat;
+  margin-top: 0;
+  max-width: none;
+  min-height: 180px;
+  padding: 30px 0 15px;
+}
   
   @media (max-width: 600px) {
     .title{
