--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -1,5 +1,5 @@
-
-body.body.t {
+html,
+body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
